# CloakMCP

./: .gitignore  .mcp.json  .mcpignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  FIXES_APPLIED.md  ISSUES_ADDRESSED_SUMMARY.md  ISSUES_REPORT.md  LICENSE  NEXT_SESSION_QUICK_START.md  PROJECT_STATE_v0.3.0.md  QUICKREF.md  README.md  REVIEW_RESPONSE.md  SECURITY.md  SERVER.md  SESSION_COMPLETE_2025-11-11.md  SESSION_COMPLETE_2025-11-12.md  STRATEGIC_PLAN_v0.4.0.md  THREAT_MODEL.md  TODO – REVIEW of v. 0.25.md  V0.3.0_SECURITY_RELEASE_SUMMARY.md  VSCODE_MANUAL.md  pyproject.toml  pytest.ini
api/: requests.http
cloakmcp/: audit.py  cli.py  dirpack.py  fastmcp_server.py  filepack.py  hooks.py  installer.py  mcp_server.py  normalizer.py  policy.py  scanner.py  server.py  storage.py
demo/: .mcpignore  README.md  llm_demo.sh  mcp_demo.sh  pom.xml  run_demo.sh  transcript.sh
deploy/: mcp-local.service
docs/: GROUP_POLICY_IMPLEMENTATION.md  QUICKREF.md  QUICKSTART.md  SERVER.md  THREAT_MODEL.md  VSCODE_MANUAL.md
examples/: client_sanitize.py  mcp_policy.yaml  mcp_policy_enterprise.yaml  project-with-inheritance.yaml
mcp/: actions.py  cli.py  dirpack.py  filepack.py  hooks.py  policy.py  scanner.py  server.py  storage.py
scripts/: install-claude-hooks.sh  install_claude.sh
tests/: README.md  conftest.py  test_api.py  test_backup_encryption.py  test_backup_lifecycle.py  test_comprehensive.py  test_cross_platform_hooks.py  test_filepack.py  test_hooks.py  test_key_wrapping.py  test_mcp_server.py  test_policy_enterprise.py  test_smoke.py
(+59 files in other folders)
