[project]
name = "mcp"
version = "0.2.0"
description = "Micro-Cleanse Preprocessor: local secret-removal agent (with vault pack/unpack)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Olivier Vitrac and contributors"}]
dependencies = [
  "pyyaml>=6.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "cryptography>=43.0.0",
]

[project.scripts]
mcp = "mcp.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
warn_unused_ignores = true
